# stitch_bindings

./: .gitignore  .gitmodules  .readthedocs.yml  Cargo.toml  Makefile  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml  test.yml
data/tutorial/: logo.json
docs/source/: api.rst  compress_args.rst  compress_kwargs.rst  compression_objectives.rst  conf.py  cost_metrics.rst  generated_kwargs_table.rst  index.rst  out_json.rst  usage.rst
docs/source/intro/: examples.rst  install.rst  tutorial.rst
docs/static/css/: custom.css
experiments/: Makefile  dreamcoder_requirements.txt  eta_long.py  results.html  run.py  run_requirements.txt  smc_experiment.py  smc_experiment_direct.py
scripts/: gen_kwargs_listing.py
src/: lib.rs
stitch/: __init__.py
stitch_core/: __init__.py
tests/: test.py
