[package]
name = "stitch_bindings"
version = "0.1.16"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "stitch_core"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# stitch_core = { path = "../stitch"}
stitch_core = { git = "https://github.com/mlb2251/stitch", rev = "f30f81b8c4ccff0d03b56a9484169c3c8960fc4e"}
pyo3 = {version = "0.17.3", features = ["extension-module"] }
clap = { version = "3.1.0" }

[build-dependencies]
pyo3-build-config = "0.17.3"

