[build-system]
requires = ["maturin>=1.8.7,<1.8.8"]
build-backend = "maturin"

[project]
name = "stitch_core"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


